# 2d-Engine

./: CMakeLists.txt
App/src/: main.cpp
Core/: CMakeLists.txt
Core/include/: Entity.h  Event.h  EventManager.h  EventSys.h  Game.h  Movement.h  MovementSys.h  Renderer.h  Window.h
Core/include/components/: Component.h  Control.h  Movement.h  Sprite.h  Transform.h
Core/include/systems/: InputSys.h  MovementSys.h
Core/src/: Entity.cpp  Event.cpp  EventManager.cpp  EventSys.cpp  Game.cpp  InputSys.cpp  Movement.cpp  MovementSys.cpp  Renderer.cpp  Window.cpp
